--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <div class="six">
             <img src="img/irena.png" alt="profile" class="profile-picture" id="imagePath"/>
-            <img src="img/hat.svg" alt="hat" class="hat" />
+            <img src="img/hat.png" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
                 <h5 id="wishText">誕生日おめでとう!!</h5>
